dontwork_home_details_decorate

--- a/src/app/main/accounts/accounts-home/accounts-home.component.html
+++ b/src/app/main/accounts/accounts-home/accounts-home.component.html
@@ -1,4 +1,4 @@
-<o-form-layout-manager title="{{'ACCOUNTS' | oTranslate }}" separator=" " mode="dialog" label-columns="ANID">
+<o-form-layout-manager title="{{'ACCOUNTS' | oTranslate }}" separator=" " mode="tab" label-columns="ACCOUNTNUMBER">
   <div fxFlex>
    <o-table fxFlex attr="accountsTable" service="branches" entity="account" keys="ACCOUNTID" 
      columns="ACCOUNTID;ENTITYID;OFFICEID;CDID;ANID;STARTDATE;ENDDATE;INTERESRATE;ACCOUNTTYP"
