--- a/src/app/main/customers/customers-home/customers-home.component.html
+++ b/src/app/main/customers/customers-home/customers-home.component.html
@@ -1,12 +1,24 @@
-<o-form-layout-manager title="{{'CUSTOMERS' | oTranslate }}" separator=" " mode="tab" label-columns="NAME;SURNAME">
+<o-form-layout-manager title="{{'CUSTOMERS' | oTranslate }}" separator=" " mode="dialog" label-columns="NAME;SURNAME">
   <div fxFlex>
-   <o-table fxFlex attr="customersTable" service="customers" entity="customer" keys="CUSTOMERID" 
-     columns="CUSTOMERID;ID;PHOTO;NAME;SURNAME;STARTDATE;EMAIL"
-     visible-columns="ID;PHOTO;NAME;SURNAME;STARTDATE;EMAIL" query-rows="20">
-     <o-table-column attr="PHOTO" title="PHOTO" orderable="no" searchable="no" type="image" avatar="no" 
-       empty-image="assets/images/no-image.png" image-type="base64"></o-table-column>
-     <o-table-column attr="STARTDATE" title="STARTDATE" type="date" format="LL"></o-table-column>
-     <o-table-column attr="ID" title="ID" width="100px"></o-table-column>
-   </o-table>
+    <o-grid #grid  columns="CUSTOMERID;ID;PHOTO;NAME;SURNAME;STARTDATE;EMAIL" service="customers" entity="customer" keys="CUSTOMERID" 
+    orderable="yes" quick-filter="yes" sortable-columns="ID;SURNAME" sort-column="ID" pagination-controls="yes"  gutter-size=5px cols="3">
+    
+    <o-grid-item *ngFor="let list of grid.dataArray">
+      <div  class="image">
+        <img src="./assets/images/customer.png">
+      </div>
+      <o-column title-label="" appearance='outline'>
+        <mat-divider fxFlex></mat-divider>
+        <div class="ID"> {{ list.ID }}</div>
+        <div class="NAME"> {{ list.NAME }}</div>
+        <div class="SURNAME"> {{ list.SURNAME }}</div>
+        <div class="STARTDATE"> {{ list.STARTDATE | date }}</div>
+        <div class="EMAIL"> {{ list.EMAIL }}<mat-icon>email</mat-icon><span></span></div>
+        <mat-divider fxFlex></mat-divider>
+          
+      </o-column>
+    </o-grid-item>
+    
+  </o-grid>  
   </div>
  </o-form-layout-manager>
