--- a/src/app/main/employees/employees-home/employees-home.component.html
+++ b/src/app/main/employees/employees-home/employees-home.component.html
@@ -1,4 +1,4 @@
-<o-form-layout-manager title="{{'EMPLOYEES' | oTranslate }}" separator=" " mode="dialog" label-columns="EMPLOYEENAME;EMPLOYEESURNAME">
+<o-form-layout-manager title="{{'EMPLOYEES' | oTranslate }}" separator=" " mode="tab" label-columns="EMPLOYEENAME;EMPLOYEESURNAME">
   <div fxFlex>
    <o-table fxFlex attr="employeesTable" service="employees" entity="employee" keys="EMPLOYEEID" 
      columns="EMPLOYEEID;EMPLOYEENAME;EMPLOYEESURNAME;EMPLOYEEPHOTO;EMPLOYEEADDRESS;EMPLOYEESTARTDATE;EMPLOYEEEMAIL;OFFICEID;EMPLOYEETYPEID"
