--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,12 @@
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
   <p>
-    Ontimize web seed application home component
+    Welcome to Bank Manager application !
   </p>
 </div>
+<!--<div>
+<o-list attr="homeList" service="home" entity="home">
+  <o-list-item-card #item (click)="openDetailCustomers(item)" title="{{'CUSTOMERS' | oTranslate }}" avatar="./assets/images/ontimize.png" image="./assets/images/ontimize.png" >
+  </o-list-item-card>
+</o-list>
+</div>
+-->
