Customers_grid_Branches_ok_BUT_ACCOUNT_DONT_WORK

--- a/src/app/main/customers/customers-new/customers-new.component.html
+++ b/src/app/main/customers/customers-new/customers-new.component.html
@@ -12,9 +12,9 @@
       <o-row>
         <o-nif-input attr="ID" class="input-padding" fxFlex="40" required="yes"></o-nif-input>
         <o-integer-input attr="PHONE" class="input-padding" step="0" grouping="no" fxFlex="40"></o-integer-input>
-        <o-list-picker attr="CUSTOMERTYPEID" class="input-padding" fxFlex="20" service="customers" 
-           entity="customerType" keys="CUSTOMERTYPEID" columns="CUSTOMERTYPEID;DESCRIPTION" 
-           visible-columns="DESCRIPTION" value-column="CUSTOMERTYPEID"></o-list-picker>
+        <o-list-picker attr="CUSTOMERTYPEID" class="input-padding" fxFlex="20" service="customers" entity="customerType"
+          keys="CUSTOMERTYPEID" columns="CUSTOMERTYPEID;DESCRIPTION" visible-columns="DESCRIPTION"
+          value-column="CUSTOMERTYPEID"></o-list-picker>
       </o-row>
       <o-row>
         <o-email-input attr="EMAIL" fxFlex></o-email-input>
@@ -23,14 +23,14 @@
         <o-text-input attr="ADDRESS" fxFlex></o-text-input>
       </o-row>
       <o-row>
-        <o-real-input attr="LONGITUDE" decimal-separator="," max-decimal-digits="10" min-decimal-digits="0" 
+        <o-real-input attr="LONGITUDE" decimal-separator="," max-decimal-digits="10" min-decimal-digits="0"
           class="input-padding" fxFlex="50"></o-real-input>
-        <o-real-input attr="LATITUDE" decimal-separator="," max-decimal-digits="10" min-decimal-digits="0" 
-          fxFlex="50"></o-real-input>
+        <o-real-input attr="LATITUDE" decimal-separator="," max-decimal-digits="10" min-decimal-digits="0" fxFlex="50">
+        </o-real-input>
       </o-row>
       <o-row>
-          <o-textarea-input attr="COMMENTS" fxFlex></o-textarea-input>
-        </o-row>
+        <o-textarea-input attr="COMMENTS" fxFlex></o-textarea-input>
+      </o-row>
     </o-column>
   </o-row>
 </o-form>
