--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,3 @@
-<o-app-layout opened-sidenav-image="assets/images/layout.png"
-closed-sidenav-image="assets/images/layout.png" class=imagedesk>
-<div><p></p></div>
-<o-card-menu-layout parent-menu-id="views">
-</o-card-menu-layout>
+<o-app-layout>
+  <router-outlet></router-outlet>
 </o-app-layout>
