--- a/src/app/main/branches/branches-home/branches-home.component.html
+++ b/src/app/main/branches/branches-home/branches-home.component.html
@@ -11,7 +11,7 @@
       <mat-card-subtitle>{{ rowData.ADDRESS }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <p>{{ rowData.STARTDATE }}</p> <p>{{ rowData.PHONE }}</p>
+      <p>{{ rowData.STARTDATE | date }}</p> <p>{{ rowData.PHONE }}</p>
     </mat-card-content>
   </mat-card>
 </o-list>
