ACCOUNTS_DETAIL_FAIL

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -2,4 +2,8 @@
   <p>
     Ontimize web seed application home component
   </p>
+  
+  <!---->
+<o-card-menu-layout parent-menu-id="views">
+</o-card-menu-layout>
 </div>
