--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,5 @@
-<o-app-layout>
+<o-app-layout opened-sidenav-image="assets/images/layout.png"
+closed-sidenav-image="assets/images/layout.png" class=imagedesk>
+<div><p></p></div>
   <router-outlet></router-outlet>
 </o-app-layout>
