--- a/src/app/main/customers/customers-detail/customers-detail.component.html
+++ b/src/app/main/customers/customers-detail/customers-detail.component.html
@@ -4,7 +4,7 @@
     <o-column>
       <o-image id="CUSTOMER_PHOTO" attr="PHOTO" empty-image="assets/images/no-image.png" sql-type="OTHER"></o-image>
     </o-column>
-    <mat-tab-group fxFlex>
+    <mat-tab-group fxFlex> 
       <mat-tab label="{{ 'CUSTOMER_PERSONAL_INFORMATION' | oTranslate }}">
         <o-column fxFlex layout-padding>
           <o-row>
@@ -31,7 +31,7 @@
             <o-real-input attr="LATITUDE" decimal-separator="," max-decimal-digits="10" min-decimal-digits="0" fxFlex="50"></o-real-input>
           </o-row>
           <o-row>
-            <o-textarea-input attr="COMMENTS" fxFlex></o-textarea-input>
+            <o-textarea-input attr="COMMENTS"  class="com" fxFlex ></o-textarea-input>
           </o-row>
         </o-column>
       </mat-tab>
