--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,9 +1,10 @@
+
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
-  <p>
-    Ontimize web seed application home component
+  <p class="wel" > {{'WELCOME TO BANK MANAGER APP' | oTranslate }}
   </p>
   
-  <!---->
-<o-card-menu-layout parent-menu-id="views">
-</o-card-menu-layout>
 </div>
+  
+  <!---->
+<o-card-menu-layout parent-menu-id="views" class="cards">
+</o-card-menu-layout>
