--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -1,3 +1,15 @@
 .bg {
   background-color: darkred;
 }
+.wel{
+  color: rgb(255, 209, 6);
+  font-family: Arial;
+  font-weight: bold;
+  font-size: xx-large;
+}
+.cards{
+  font-family: Arial;
+  font-weight: bold;
+  font-size: 20px;
+
+}
