--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <o-app-layout opened-sidenav-image="assets/images/layout.png"
-closed-sidenav-image="assets/images/layout.png" class=imagedesk>
+closed-sidenav-image="assets/images/layout.png" class=imagedesk  mode="mobile" show-header="yes">
 <div><p></p></div>
   <router-outlet></router-outlet>
 </o-app-layout>
