--- a/src/app/main/accounts/accounts-home/accounts-home.component.html
+++ b/src/app/main/accounts/accounts-home/accounts-home.component.html
@@ -6,7 +6,7 @@
      <o-table-column attr="STARTDATE" title="STARTDATE" type="date" format="LL"></o-table-column>
      <o-table-column attr="ENDDATE" title="ENDDATE" type="date" format="LL"></o-table-column>
      <o-table-column attr="INTERESRATE" title="INTERESRATE" type="percentage" width="150px" decimal-separator=","></o-table-column>
-     <o-table-column attr="ACCOUNTNUMBER" title="ACCOUNTNUMBER" class="o-table-column-centered">
+     <o-table-column attr="ACCOUNTNUMBER" title="ACCOUNTNUMBER" class="accountn">
        <app-account-number-render></app-account-number-render>
      </o-table-column>
      <o-table-column-calculated attr="INTERESRATE_MONTHLY" title="INTERESRATE_MONTHLY" [operation-function]="intRateMonthly" type="percentage"
