--- a/src/app/main/employees/employees-detail/employees-detail.component.html
+++ b/src/app/main/employees/employees-detail/employees-detail.component.html
@@ -1,5 +1,5 @@
 <o-form service="employees" entity="employee" keys="EMPLOYEEID" header-actions="R;U;D" show-header-navigation="yes">
-  <o-integer-input attr="EMPLOYEEID" sql-type="INTEGER" enabled="no"></o-integer-input>
+  <o-integer-input attr="EMPLOYEEID" sql-type="INTEGER" enabled="no" class="id"></o-integer-input>
   <o-row>
     <o-column>
       <o-image attr="EMPLOYEEPHOTO" empty-image="assets/images/no-image.png" sql-type="OTHER"></o-image>
