--- a/src/app/main/employees/employees-home/employees-home.component.html
+++ b/src/app/main/employees/employees-home/employees-home.component.html
@@ -7,8 +7,8 @@
      <o-table-column attr="EMPLOYEEPHOTO" title="EMPLOYEEPHOTO" orderable="no" searchable="no" type="image" avatar="no" empty-image="assets/images/no-image.png"
        image-type="base64" width="150px"></o-table-column>
      <o-table-column attr="EMPLOYEESTARTDATE" title="EMPLOYEESTARTDATE" type="date" format="LL"></o-table-column>
-     <o-table-column attr="EMPLOYEENAME" title="EMPLOYEENAME" width="150px"></o-table-column>
-     <o-table-column attr="EMPLOYEESURNAME" title="EMPLOYEESURNAME" width="150px"></o-table-column>
+     <o-table-column attr="EMPLOYEENAME" title="EMPLOYEENAME" width="150px" class="name"></o-table-column>
+     <o-table-column attr="EMPLOYEESURNAME" title="EMPLOYEESURNAME" width="150px" class="sur"></o-table-column>
    </o-table>
   </div>
  </o-form-layout-manager>
